# census-lookup

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: acs_lookup.py  basic_lookup.py  batch_processing.py
src/census_lookup/: __init__.py  __main__.py
src/census_lookup/address/: __init__.py  matcher.py  normalizer.py  parser.py
src/census_lookup/census/: __init__.py  acs.py  variables.py
src/census_lookup/cli/: __init__.py  commands.py
src/census_lookup/core/: __init__.py  geoid.py  lookup.py  spatial.py
src/census_lookup/data/: __init__.py  catalog.py  constants.py  converter.py  downloader.py  duckdb_engine.py  manager.py  pl94171_parser.py
src/census_lookup/stubs/: usaddress.pyi
src/census_lookup/utils/: __init__.py  fips.py
tests/: __init__.py  conftest.py
tests/functional/: __init__.py  conftest.py  test_acs_edge_cases.py  test_api.py  test_batch.py  test_cli.py  test_configuration.py  test_coordinates.py  test_download_errors.py  test_edge_cases.py  test_errors.py  test_geocode.py  test_variables.py
tests/integration/: __init__.py  test_acs.py  test_geocoding.py
tests/unit/: __init__.py  test_catalog.py  test_constants.py  test_duckdb_engine.py  test_geoid.py  test_normalizer.py  test_parser.py  test_pl94171_parser.py  test_spatial.py  test_variables.py
tests/unit/census/: __init__.py  test_acs.py
