[project]
name = "census-lookup"
version = "0.1.2"
description = "Offline address-to-Census data mapping for Python with PL 94-171 and ACS support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Harry Waye"}
]
keywords = ["census", "geocoding", "gis", "tiger", "demographics", "acs", "pl94171"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "duckdb>=1.0.0",
    "geopandas>=0.14.0",
    "pandas>=2.0.0",
    "shapely>=2.0.0",
    "pyproj>=3.0.0",
    "usaddress>=0.5.10",
    "requests>=2.28.0",
    "click>=8.0.0",
    "tqdm>=4.65.0",
    "pyarrow>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
census-lookup = "census_lookup.cli:cli"

[project.urls]
Homepage = "https://github.com/yolodex-ai/census-lookup"
Repository = "https://github.com/yolodex-ai/census-lookup"
Issues = "https://github.com/yolodex-ai/census-lookup/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=census_lookup"
