[project]
name = "census-lookup"
version = "0.1.9"
description = "Offline address-to-Census data mapping for Python with PL 94-171 and ACS support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Harry Waye"}
]
keywords = ["census", "geocoding", "gis", "tiger", "demographics", "acs", "pl94171"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "duckdb>=1.0.0",
    "geopandas>=0.14.0",
    "pandas>=2.0.0",
    "shapely>=2.0.0",
    "pyproj>=3.0.0",
    "usaddress>=0.5.10",
    "requests>=2.28.0",
    "aiohttp>=3.9.0",
    "click>=8.0.0",
    "tqdm>=4.65.0",
    "pyarrow>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.5.0",
    "aioresponses>=0.7.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
census-lookup = "census_lookup.cli:cli"

[project.urls]
Homepage = "https://github.com/yolodex-ai/census-lookup"
Repository = "https://github.com/yolodex-ai/census-lookup"
Issues = "https://github.com/yolodex-ai/census-lookup/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"src/census_lookup/data/constants.py" = ["E501"]  # Allow long lines for county FIPS lists

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pyright]
pythonVersion = "3.10"
stubPath = "src/census_lookup/stubs"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownParameterType = false
reportPrivateUsage = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=census_lookup"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests as integration tests (require network, downloads data)",
]

[tool.coverage.run]
branch = true
source = ["src/census_lookup"]
omit = [
    # Entry point - trivial wrapper
    "src/census_lookup/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    # Standard exclusions
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    # Progress bar / display code
    "if show_progress:",
    "tqdm\\(",
    # Error messages only
    "click.echo.*err=True",
]
partial_branches = [
    "pragma: no branch",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
]
